<resources>
    <string name="app_name">LavaDemoApp</string>
    <string name="action_settings">Settings</string>
    <string name="version">Version</string>
    <string name="debug_info">Debug Info</string>

    //Login Screen
    <string name="email_address">Email</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_consent">ConsentActivity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="logout">Logout</string>
    <string name="account_settings">Account Settings</string>
    <string name="profile">Profile</string>
    <string name="tv_debug">Debug</string>
    <string name="analytics">Analytics</string>

    <string name="save">SAVE</string>
    <string name="inboxmessage">Inbox Message</string>
    <string name="inbox_messages">Inbox Messages</string>
    <string name="show_debug_info">Show Debug Info</string>
    <string name="refresh">Refresh</string>
    <string name="edit">Edit</string>
    <string name="state">State :</string>
    <string name="unread_count">U Count</string>
    <string name="total_count">T count</string>
    <string name="password">Password</string>
    <string name="enable_secure_member_token">Enable Secure Member Token</string>
    <string name="please_wait">Please wait ...</string>
    <string name="string_consent_preferences">Consent Preferences</string>
    <string name="anonymous_status">Currently using as an Anonymous user</string>
    <string name="failed_anonymous_login">Failed to login as Anonymous user</string>
    <string name="initialize_options">Initialize Options</string>
    <string name="show_pass">Show Pass</string>

</resources>
