<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/signinTextBackground"
        android:minHeight="?attr/actionBarSize"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:titleTextAppearance="@style/Base.TextAppearance.AppCompat.Headline">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_text_size" />

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/rl_login_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <Button
                    android:id="@+id/bt_inbox_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/inboxMessages"
                    android:text="@string/inbox_messages"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/toolbar_title_text_size" />

                <Button
                    android:id="@+id/bt_show_debug"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bt_inbox_message"
                    android:layout_marginTop="5dp"
                    android:background="@color/inboxMessages"
                    android:text="@string/show_debug_info"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/toolbar_title_text_size" />

                <TextView
                    android:id="@+id/tv_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bt_show_debug"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textSize="@dimen/sign_in_screen_or_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_or"
                    android:layout_marginTop="15dp"
                    android:background="@color/white"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:paddingStart="7dp"
                    android:paddingTop="7dp"
                    android:paddingEnd="7dp"
                    android:paddingBottom="7dp"
                    android:singleLine="true"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textColorHint="#757575"
                    android:text="app.001@lava.ai" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_email"
                    android:layout_marginTop="15dp"
                    android:background="@color/white"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingStart="7dp"
                    android:paddingTop="7dp"
                    android:paddingEnd="7dp"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textColorHint="#757575"
                    android:text="123456" />

                <Button
                    android:id="@+id/bt_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_password"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ripple_effect_with_pink_background"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/toolbar_title_text_size" />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
