<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/signinTextBackground"
        android:minHeight="?attr/actionBarSize"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:titleTextAppearance="@style/Base.TextAppearance.AppCompat.Headline">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toStartOf="@+id/toolbar_save"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/toolbar_title_text_size" />


            <TextView
                android:id="@+id/toolbar_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="?android:selectableItemBackground"
                android:padding="5dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:visibility="invisible" />


        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>


    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">


        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <!--android:background="@drawable/bg"-->

        <!-- Side navigation drawer UI -->
        <ScrollView
            android:id="@+id/left_drawer"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/drawer">

                <LinearLayout
                    android:id="@+id/llContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:text="@string/profile"
                        android:textColor="@color/white"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/tv_demo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:text="@string/analytics"
                        android:textColor="@color/white"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/tv_debug"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:text="@string/tv_debug"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_show_debug"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:text="@string/show_debug_info"
                        android:textColor="@color/white"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/tv_account_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:text="@string/account_settings"
                        android:textColor="@color/white"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/tv_inbox_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:text="@string/inboxmessage"
                        android:textColor="@color/white"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/tv_log_out"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:text="@string/logout"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        />

                    <TextView
                        android:id="@+id/tv_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:background="?android:selectableItemBackground"
                        android:gravity="center_horizontal"
                        android:paddingTop="15dp"

                        android:paddingBottom="15dp"
                        android:text="@string/version"
                        android:textColor="@color/black" />

                </LinearLayout>

                <!--<TextView-->
                <!--android:layout_below="@id/llContainer"-->
                <!--android:id="@+id/tv_version"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="50dp"-->
                <!--android:gravity="center_horizontal"-->
                <!--android:padding="20dp"-->
                <!--android:text="Version"-->
                <!--android:textColor="@color/black" />-->
            </RelativeLayout>
        </ScrollView>

    </androidx.drawerlayout.widget.DrawerLayout>

</RelativeLayout>
